--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <p>Submit your image securely and get instant processing results.</p>
         <form id="imageForm" action="/" method="POST" enctype="multipart/form-data">
             <!-- Custom File Input -->
-            <label for="fileInput" class="userupload">Choose Image</label>
+             <button><label for="fileInput" class="userupload">Choose Image</label></button>
             <input type="file" id="fileInput" name="file" accept="image/*" required>
             <div class="image-preview" id="imagePreview">
                 <p>No image selected</p>
