--- a/result.html
+++ b/result.html
@@ -53,6 +53,7 @@ button {
     transition: background-color 0.3s ease;
 }
 button a{
+    color: aliceblue;
     text-decoration: none;
 }
 button:hover {
